# Project_5-Assignments

./: README.md  encrypted_data.json  main.py  pyproject.toml  requirements.txt  secret.key  styles.css
