[project]
name = "secure-data-encryption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=44.0.2",
    "opencv-python>=4.11.0.86",
    "pyperclip>=1.9.0",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=8.1",
    "streamlit>=1.44.1",
    "streamlit-extras>=0.6.0",
    "streamlit-modal>=0.1.2",
    "zxcvbn>=4.5.0",
]
